# vote-bot

./: Dockerfile  classes.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
.gitignore/cmds/: poll.py
.gitignore/data/: poll.json
cmds/: dapigu.py  date.py  others.py  poll.py  song.py  yellow.py
data/: date.json  poll.json  poll_decoractor.json  poll_decorator.json  song_decorator.json  yellow_decorator.json
data/packs/: basic2a.txt  basic2q.txt  basica.txt  basicq.txt  ex1a.txt  ex1q.txt  ex2a.txt  ex2q.txt  ex3a.txt  ex3q.txt  ex4a.txt  ex4q.txt  ex5a.txt  ex5q.txt  ex6a.txt
