[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["JHTNT <jerry1106666@gmail.com>"]
description = ""
name = "jhtntbot"
version = "0.1.0"
[tool.poetry.dependencies]
aiohttp = "^3.6.2"
discord-py-slash-command = "^3.0.1"
"discord.py" = "^1.7.3"
flask = "^1.1.2"
jsonpickle = "^2.0.0"
python = "^3.8"
replit = "^2.0.0"
requests = "^2.26.0"
[tool.poetry.dev-dependencies]
